# pachka_watcher

./: .env.example  .gitignore  Makefile  pyproject.toml  setup.cfg
pachka_watcher/: exceptions.py  main.py  settings.py
pachka_watcher/integrations/: auth.py  client.py
pachka_watcher/schemas/: messages.py
pachka_watcher/services/: pachka.py
tests/: test_client.py
