[tool.poetry]
name = "pachka-watcher"
version = "1.0.0"
description = "Pachka YaP SLA watcher"
authors = ["Alexey Potapov <2furius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
wemake-python-styleguide = "^0.19.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
