[tool.poetry]
name = "pachka-watcher"
version = "1.0.0"
description = "Pachka YaP SLA watcher"
authors = ["Alexey Potapov <2furius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
aiogram = "^3.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
wemake-python-styleguide = "^0.19.2"
mypy = "^1.11.2"
pytest-cov = "^5.0.0"


[tool.poetry.scripts]
pachka_watcher = "pachka_watcher.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
